--- a/main.tex
+++ b/main.tex
@@ -44,6 +44,7 @@ outer=3.8cm, % Outer margin
 \usepackage{phaistos} % animal symbols
 \usepackage{multirow}
 \usepackage{setspace}
+\usepackage{enumitem}
 %\usepackage{DejaVuSans}
 %\usepackage[T1]{fontenc}
 
