--- a/hybrid_cosy_spfs.tex
+++ b/hybrid_cosy_spfs.tex
@@ -1,21 +1,21 @@
 \chapter{Compose dynamic symmetry handling}\label{chap:compose}
 \minitoc
 \section{Composition of SP and SymmSAT}
-In the previous chapter, we present an approach that reuses the
+In the previous chapter, we presented an approach that reuses the
 principles of the static approaches, but operates dynamically (namely, the effective symmetry breaking approach~\cite{metin2018cdclsym}):
- the symmetries are broken during the search process without any pre-generation of the \textit{sbp}. The main
+ the symmetries are broken during the search process without any pre-generation of the \textit{sbps}. The main
 advantage of this technique is to cope with the heavy (and potentially
 blocking) pre-generation phase of the static-based approaches. It also gives
 more flexibility for adjusting some parameters on the fly. 
 Nevertheless, we also observed that many formulas easily solved by the pure
 dynamic approaches remained unsolvable by our approach and vice versa. This is
-particularly true with the \textit{symmetry propagation} technique developed by
+particularly true when comparing  with the \textit{symmetry propagation} technique developed by
 Devriendt et al.~\cite{Devriendt12}.
 Hence, our goal is to explore the composition of our algorithm with the  \textit{symmetry propagation} technique in
 a new approach that would mix the advantages of the two classes of techniques while alleviating their drawbacks. At first sight,
-the two approaches appear to be orthogonal, and hence could be mixed easily. However, as we show in the rest of this section,
+the two approaches appear to be orthogonal, and hence could be mixed easily. However, as we show in the rest of this chapter,
 this is not completely true: both theoretical and practical issues have to be analyzed and solved to get a
-running complementary. 
+running complementarity. 
 Since the approach based on symmetry propagation (later called SPA) focuses on
 accelerating the tree traversal and the approach based on effective symmetry
 breaking (later called ESBA) targets to prune the tree traversal, the question of combining these approaches, to solve a formula $\varphi$, can
@@ -34,13 +34,14 @@ allowed permutations in place of those of $\varphi$.
 A first naive solution could be to recompute, dynamically, the set of symmetries of $\varphi
 \cup \varphi_e \cup \varphi_d$ for each new $\varphi_e \cup \varphi_d$, but
 this would be an intractable solution generating a huge complexity. 
+
 A  computationally less expensive solution would be to keep track of all globally unbroken symmetries as the clauses of $\varphi_e$ are injected during the solving process: considering formula $\varphi$ and 
 a set of esbps $\varphi_e$ then the set of global unbroken symmetries is:
-$$GUS = \underset{\omega_e \in \varphi_e}{\bigcap}Stab(\omega_e) \cap S(\varphi)$$
- Where  $Stab(\omega_e)=\{g \in \Group{\Vars}\mid
-\omega_e=g.\omega_e\}$ is the stabilizer set of $\omega_e$ and $S(\varphi)$ is the set of symmetries of $\varphi$. 
+$$GUS = \underset{\omega_e \in \varphi_e}{\bigcap}Stab(\omega_e) \cap G_{\varphi}$$
+ Where  $Stab(\omega_e)=\{g \in \Group \mid
+\omega_e=g.\omega_e\}$ is the stabilizer set of $\omega_e$ and $G_{\varphi}$ is the set of symmetries of $\varphi$. 
 Since $\varphi \cup \varphi_e  \models \varphi_d$, then $GUS$ is a valid set of symmetries for $\varphi \cup \varphi_e \cup \varphi_d$.
-Then, (1) each time a new set of esbp clauses is added, its stabilizer will be used to reduce $GUS$;
+Then, (1) each time a new set of esbp clauses is added, its stabilizer will be used to reduce $GUS$;\label{prop:one}
 (2) conversely, when a set of esbp clauses is reduced\footnote{In classical CDCL algorithm, this can be due to a back-jump or a restart.},
 $GUS$ cannot be enlarged by the recovered broken symmetries because of the retrieved set:
 \textit{at that point, we do not know which symmetries become valid}! 
@@ -52,9 +53,11 @@ We first present the intuition, then we will detail and formalize it.
 %The idea here is to keep track of particular symmetries for each clause. For a deduced clause, this set of symmetries captures which esbp's were involved in a deduced clause's derivation. The intersection of these sets is a superset of the globally unbroken symmetries, and a strict superset after clause deletion.
 Consider formula $\varphi^\prime$ as before. It can be rewritten as:
 $$\varphi^\prime=\varphi \, \underset{i}{\bigcup}(\varphi_e^i \cup \varphi_d^i) \text{ , such that } \varphi_e \cup \varphi_d = \underset{i}{\bigcup}(\varphi_e^i \cup \varphi_d^i) \text{ and } \varphi \cup \varphi_e^i \models \varphi_d^i  \text{ for all } i$$
-So, $GUS_i = \underset{\omega_e \in \varphi_e^i}{\bigcap}Stab(\omega_e) \cap S(\varphi)$ is a valid set of symmetries for the sub-formula $\varphi \cup \varphi_e^i \cup \varphi_d^i$, and $GUS$ can be obtained by $GUS = \underset{i}{\bigcap} GUS_i$. If some esbp clauses are added to $\varphi^\prime$, then the new $GUS$ is computed as described in (1). The novelty here comes with the retrieval of some set of clauses: by keeping track of the symmetries associated to each sub-formula ($GUS_i$), it is now easy to recompute a valid set of symmetries for $\varphi^\prime$ when some set
+So, $GUS_i = \underset{\omega_e \in \varphi_e^i}{\bigcap}Stab(\omega_e) \cap G_{\varphi}$ is a valid set of symmetries for the sub-formula $\varphi \cup \varphi_e^i \cup \varphi_d^i$, and $GUS$ can be obtained by $GUS = \underset{i}{\bigcap} GUS_i$. If some esbp clauses are added to $\varphi^\prime$, then the new $GUS$ is computed as described in (1). The novelty here comes with the retrieval of some set of clauses: by keeping track of the symmetries associated to each sub-formula ($GUS_i$), it is now easy to recompute a valid set of symmetries for $\varphi^\prime$ when some set
 $\varphi_e^k \cup \varphi_d^k$ is retrieved. It suffices to operate the intersection on the valid symmetries of the rest of the sub-formulas: $GUS = \underset{i \neq k}{\bigcap} GUS_i$.
-Just say your approach keeps track of a set of particular symmetries for each clause. For a deduced clause, this set of symmetry captures which esbp's were involved in a deduced clause's derivation. The intersection of these sets is a superset of the globally unbroken symmetries, and a strict superset after clause deletion.
+
+%Just say your approach keeps track of a set of particular symmetries for each clause. For a deduced clause, this set of symmetry captures which esbp's were involved in a deduced clause's derivation. The intersection of these sets is a superset of the globally unbroken symmetries, and a strict superset after clause deletion.
+
 \subsection{Local Symmetries}
 The general and formal framework that embodies the above idea is given by the following. It first relies on the notion of \textit{local symmetries} that we introduce in \cref{def:ls}.
 \begin{definition}
@@ -63,7 +66,7 @@ The general and formal framework that embodies the above idea is given by the fo
  the set of \textit{local symmetries} for a clause $\omega$, and with respect to 
  a formula $\varphi$, as follows:
  
- $$L_{\omega,\varphi}=\{g \in \Group{\Vars}\mid \varphi \models g.\omega\}$$
+ $$L_{\omega,\varphi}=\{g \in \Group \mid \varphi \models g.\omega\}$$
 \end{definition}
 $L_{\omega,\varphi}$ is local since the set of permutations applies locally to
 $\omega$. It is then straightforward to deduce the next proposition that gives us a
@@ -72,10 +75,10 @@ formula (by using the intersection of all local symmetries).
 \begin{proposition}
  \label{prop:gls-prop}
  Let $\varphi$ be a formula. Then,  $\underset{\omega \in \varphi}{\bigcap}L_{\omega,\varphi} 
- \subseteq S(\varphi)$.
+ \subseteq G_{\varphi}$.
 \end{proposition}
 \begin{proof}
- Let $\varphi$ be a formula. Then, $\forall \omega \in \varphi, \forall g \in L_{\omega,\varphi}, \varphi \models g.\varphi $. So, $\forall g \in \underset{\omega \in \varphi}{\bigcap}L_{\omega,\varphi}, \varphi \models g.\varphi$. This is combined with the fact that the number of satisfying assignments for a formula is not changed by permuting the variables of the formula, we have $g.\varphi \models \varphi$. Hence $\varphi \equiv g.\varphi$, and $g \in S(\varphi)$ (by definition). 
+ Let $\varphi$ be a formula. Then, $\forall \omega \in \varphi, \forall g \in L_{\omega,\varphi}, \varphi \models g.\varphi $. So, $\forall g \in \underset{\omega \in \varphi}{\bigcap}L_{\omega,\varphi}, \varphi \models g.\varphi$. This is combined with the fact that the number of satisfying assignments for a formula is not changed by permuting the variables of the formula, we have $g.\varphi \models \varphi$. Hence $\varphi \equiv g.\varphi$, and $g \in G_{\varphi}$ (by definition). 
 \end{proof}
 Using this proposition, it becomes easy to reconsider the symmetries
 on-the-fly: each time a new clause $\omega$ is added to the formula $\varphi$,
@@ -121,15 +124,14 @@ algorithm~\ref{algo:cdclSYMSP}.
 %Lines $3$-$10$, $15$-$17$ and $20$-$22$ correspond to the exact union of {\cdclsym} and {\cdclsp}. 
 Let us detail the critical points.
 \begin{itemize}[topsep=2pt]
- \item \Cref{algo:start_stab,algo:end_stab}: when a conflict is detected, then the analyzing
+ \item \Cref{algo:start_stab}: when a conflict is detected, then the analyzing
  procedure is triggered. According to Proposition \ref{prop:lsc-prop}, the
  generated conflicting clause $\omega$, should be associated with the
  computation of its set of local symmetries. Thus, we update the classical
  \texttt{analyzeConflict} procedure to \texttt{analyzeConflictSymSp} that produces such
- a set: $\varphi_1$ contains all the clauses that are used to derive $\omega$\footnote{These are clauses of the \textit{conflict side} of the implication graph when applying the classical conflict analysis algorithm.}. So, at the end of the conflict analysis we operate the intersection of a local symmetry of these clauses to get the set of local symmetries of $\omega$. We can thus complete this set with the stabilizer set (see as Proposition \ref{prop:lsc-prop}).
+ a set: $\varphi_1$ contains all the clauses that are used to derive $\omega$\footnote{These are clauses of the \textit{conflict side} of the implication graph when applying the classical conflict analysis algorithm.}. So, at the end of the conflict analysis, we operate the intersection of a local symmetry of these clauses to get the set of local symmetries of $\omega$. We can thus complete this set with the stabilizer set (see Proposition \ref{prop:lsc-prop}).
  
- In the classical algorithm of symmSAT, when a non lex-leader assignment is detected
- , then the esbp generation function, \texttt{generateEsbp}, is
+ In the classical algorithm of symmSAT, when a non lex-leader assignment is detected, then the esbp generation function, \texttt{generateEsbp}, is
  called. In the new algorithm this function is replaced by a new one called
  \texttt{generateEsbpSp}. In addition to compute the esbp clause $\omega$, it
  produces the stabilizer set of $\omega$\footnote{The only allowed  local symmetries in case of an esbp.}.
@@ -140,19 +142,34 @@ Let us detail the critical points.
  \item \Cref{algo:symsp:updateloc}: \texttt{updateLocalSymmetries} is a new function of
  $\texttt{spController}$. It is responsible of updating the status of the manipulated
  symmetries so that only those respecting Proposition \ref{prop:gls-prop} are
- active each time the \texttt{symPropagation} function is called. Technically speaking, each symmetry of the complement set (to $S(\varphi)$) of the set $L$ is marked \textit{inactive} (it is a broken symmetry), if it is not already marked so. Here, the asserting literal of clause $\omega$ becomes responsible of this deactivation. 
+ active each time the \texttt{symPropagation} function is called. Technically speaking, each symmetry of the complement set (to $G_{\varphi}$) of the set $L$ is marked \textit{inactive} (it is a broken symmetry), if it is not already marked so. Here, the asserting literal of clause $\omega$ becomes responsible of this deactivation. 
  
- \item \Cref{algo:symsp:updateact}: \texttt{updateActiveSymmetriesSym} extends function \texttt{updateActiveSymmetries} of algorithm~\ref{algo:cdclsp}. The reason clause, $\omega_l$, of each propagated literal, $l$, by the \texttt{unitPropagation} function is analyzed. Each symmetry of the complement set (to $S(\varphi)$) of the set local symmetries of $\omega_r$ is marked \textit{inactive}, if it is not already marked so. $l$ becomes responsible of this deactivation. 
+ \item \Cref{algo:symsp:updateact}: \texttt{updateActiveSymmetriesSym} extends function \texttt{updateActiveSymmetries} of algorithm~\ref{algo:cdclsp}. The reason clause, $\omega_l$, of each propagated literal, $l$, by the \texttt{unitPropagation} function is analyzed. Each symmetry of the complement set (to $G_{\varphi}$) of the set local symmetries of $\omega_r$ is marked \textit{inactive}, if it is not already marked so. $l$ becomes responsible of this deactivation. 
 \end{itemize}
+
+
+\subsection{Illustrative Example}
+
+Consider the following permutation $G = \{ g_1 = (x_1 x_2) (x_3 x_4)  , g_2 = (x_3 x_4) (x_5 x_6) \}$,
+the lexicographic ordering relation of variables with $\true < \false$ and 
+the current assignment $\alpha = \{\neg x_7 \}$.
+Suppose the permutation $g_1$ already generate the $esbp$ $\omega_e = \{ x_1 \neg x_2\}$ then, associated local symmetry is 
+$g_2$ because it stabilizes $\omega_e$ ($g_2.\omega_e = \omega_e)$. Then, suppose a conflict occurs and the resulting clause is
+$\omega_d = \{x_4\, x_7\}$. In the conflict analysis, this clause is deduced by original clauses and $\omega_e$.
+ So, it have the same valid symmetries as $\omega_e$. As $g_2.\omega_d = \{x_3\, x_7\}$ is an assertive clause and $g_2$ is a valid 
+ permutation for this clause SP can propagate $x_3$ (the symmetrical of $\omega_d)$
+
+
+
 \subsection{Implementation}
 We have implemented our combo on top of the
 \texttt{minisat-SPFS}\footnote{https://github.com/JoD/minisat-SPFS} solver,
 developed by the authors of SPA.
 This choice has been influenced by two points: (1) take advantage of the
 expertise used to implement the original SPA method; (2) the easiness of
-integrating our implementation of ESBA to any CDCL-like solver because it is an
+integrating our implementation of ESBA to any CDCL-like solver (because it is an
 off-the-shelf library\footnote{This library is released under GPL v3 license,
-see \url{https://github.com/lip6/cosy}.}.
+see \url{https://github.com/lip6/cosy}.}).
 However, this choice has the drawback of doubling the representation of
 symmetries. This can be a hard limit to treat certain big problems from the
 memory point of view.
@@ -164,11 +181,12 @@ have been performed with a modified version of the well-known \minisat{} solver 
 SPA; \texttt{minisat-Sym}, for ESBA; and \texttt{minisat-SymSP}, for the
 combo. Symmetries of the SAT problems have been computed by
 \bliss{}~\cite{JunttilaKaski:ALENEX2007}.
+
 We selected from the last seven editions of the SAT contest
 \cite{jarvisalo2012international}, the CNF problems for which \bliss{} finds
 some symmetries that could be computed in at most $1000s$ of CPU time. We
 obtained a total of $1400$ SAT problems (discarding repetitions) out of the
-$4000$ proposed by the seven editions of the contest.
+$4000$ proposed by the seven editions of the contest (from 2012 to 2018).
 \begin{table}\footnotesize
  \centering
  % \resizebox{1 \textwidth}{!}{
@@ -211,12 +229,14 @@ $4000$ proposed by the seven editions of the contest.
  \caption{Comparison of the number of UNSAT problems solved by each approach.}
  \label{tab:unsat}
 \end{table}
+
 All experiments have been conducted using the following settings: each solver
 has been run once on each problem, with a time-out of 7200 seconds (including
 the execution time of symmetry generation) and limited to 64 GB of memory.
-Experiments were executed on a computer with an Intel® Xeon® Gold 6148 CPU
+Experiments were executed on a computer with an Intel Xeon Gold 6148 CPU
 @ 2.40 GHz featuring 80 cores and 1500 GB of memory, running a Linux 4.17.18,
 along with g++ compiler version 8.2.
+
 Tables \ref{tab:sat} and \ref{tab:unsat} present the obtained results for SAT
 and UNSAT problems respectively. The first column of each table lists the
 classes of problems on which we operated our experiments: we classify the
@@ -225,7 +245,7 @@ problems according to the number of symmetries they admit. A line noted
 (i.e., symmetries). Other columns show the number of solved problems for each
 approach.
 Globally, we observe that the combo approach can be effective in many classes
-of symmetric problems. For SAT problems, the combo has better results than the
+of symmetrical problems. For SAT problems, the combo has better results than the
 two other approaches (4 more SAT problems when compared to the best of the two
 others) and this is despite the significant cost paid for the tracking of the
 symmetries' status. When looking at the UNSAT problems, things are more
@@ -276,7 +296,7 @@ symmetries tracking would probably reduce this cost.
 \end{figure}
 \end{center}
 
-To go further in our analyze, we also compare the ratio between the number of
+To go further in our analyze, we also compared the ratio between the number of
 decisions and the number of propagation. This is a fair measure to assess the
 quality of a SAT solving approach: if the ratio is small, then this means that
 the developed algorithm is producing more deduced facts than making guesses,
